# babel

./: .gitignore  AUDIT-BUGS.md  AUDIT-DISCOVERY.md  AUDIT-REFACTORING.md  Cargo.toml  EVENTS_INTEGRATION.md  README.md  RESEARCH-FINDINGS.md  WORKSPACE-SPLIT-PLAN.md  justfile
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
Docs/: 00-architecture.md  02-kitty-module.md  03-events-integration.md  16-naming-clarity-audit.md  17-conversation-pager-spec.md  18-harness-operations-board.md
Docs/18-harness-operations/: 01-report-shape.md  02-adapter-matrix.md  03-codex-upstream.md  04-reference-ledger.md  05-codex-io-surface.md
docs/: 01-claude-storage.md  02-kitty-module.md  03-events-integration.md  16-naming-clarity-audit.md  17-conversation-pager-spec.md  18-harness-operations-board.md  19-hook-capability-matrix.md  20-evolution-log.md  INDEX.md  kitty-cross-instance-spawning.md  kitty-pane-geometry-rc-spec.md  kitty-routing-architecture.txt  kitty-routing-quick-reference.md
docs/18-harness-operations/: 00-contract.md
examples/: overlay_usage.rs  show_config.rs  test_storage.rs
hooks/: claude.json  cline.md  codex.json  crush.json  cursor.json  factory-droid.json  gemini.json  kimi.toml  qwen-code.json
src/: agent_kind.rs  babel_storage.rs  claude_storage.rs  core.rs  daemon.rs  desktop.rs  discovery.rs  events.rs  file_index.rs  fingerprint.rs  fire.rs  harness_ops.rs  indicator.rs  ipc.rs  kitty.rs  layout.rs  lib.rs  logging.rs  main.rs  model.rs  overlay.rs  paint.rs  render.rs  session_row.rs  state.rs  summarizer.rs  visual.rs  wset.rs
src/backend/: kitty.rs  mod.rs  tmux.rs  zellij.rs
src/cli/: action.rs  bridge.rs  doctor.rs  fingerprint.rs  fork.rs  hook.rs  legend.rs  mcp.rs  mmdc.rs  mod.rs  mv.rs  prompts.rs  query.rs  resume.rs  table.rs  tmux.rs  wset.rs  zellij.rs
src/config/: README.md  loader.rs  mod.rs  schema.rs
src/harness/: README.md  claude.rs  codex.rs  events.rs  mod.rs
src/harness/aider/: ops.rs  sessions.rs  spec.rs
src/harness/amp/: sessions.rs  spec.rs
src/harness/antigravity/: ops.rs  spec.rs
src/harness/claude/: ops.rs  sessions.rs  spec.rs  title.rs  transcript.rs
src/harness/cline/: spec.rs
src/harness/codex/: ops.rs  sessions.rs  spec.rs  title.rs  transcript.rs
src/harness/crush/: ops.rs  sessions.rs  spec.rs
src/harness/cursor/: ops.rs  spec.rs
src/harness/factory_droid/: sessions.rs  spec.rs
src/harness/gemini/: ops.rs  sessions.rs  spec.rs
src/harness/github_copilot/: ops.rs  sessions.rs  spec.rs
src/harness/kilo_code/: ops.rs  spec.rs
src/harness/kimi/: ops.rs  sessions.rs  spec.rs
src/harness/kiro/: ops.rs  spec.rs
src/harness/opencode/: spec.rs
src/harness/qwen_code/: spec.rs
src/harness/roo_code/: spec.rs
src/harness_ops/: aider.rs  amp.rs  antigravity.rs  apply.rs  claude.rs  cline.rs  codex.rs  context.rs  crush.rs  cursor.rs  factory.rs  gemini.rs  github_copilot.rs  kilo.rs  kimi.rs  kiro.rs  opencode.rs  planner.rs  probes.rs  qwen.rs  roo.rs  tests.rs  types.rs  vscode.rs
src/native_sessions/: antigravity.rs  cline.rs  codex.rs  cursor.rs  github_copilot.rs  kilo_code.rs  kiro.rs  mod.rs  opencode.rs  qwen_code.rs  roo_code.rs  shared.rs
src/pager/: app.rs  demo.rs  identity.rs  jsonl_parser.rs  mod.rs  preferences.rs  project_metrics.rs  session_list.rs  transcript.rs  ui.rs
src/service/: activity.rs  matching.rs  mod.rs  refresh.rs  state.rs
src/title_policy/: buffer.rs  mod.rs  rolling_prompts.rs  session_title.rs  splice.rs
src/tui/: app.rs  ipc_client.rs  mod.rs  ui.rs
src/utility/: agent_discovery.rs  claude_discovery.rs  claude_storage.rs  ipc.rs  mod.rs  workdir.rs
tests/: characterization_activity.rs  characterization_events.rs  characterization_harness_mv.rs  characterization_ipc.rs  characterization_refresh_matching.rs  integration_fingerprint.rs
tools/: generate-swatches.py  kitty-instances.sh  test-cross-instance-spawn.sh
