[package]
name = "claude-babel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "babel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# Daemon dependencies
tokio = { version = "1", features = ["full", "signal", "sync"] }
notify = "6"
notify-debouncer-mini = "0.4"
users = "0.11"

# Terminal output
console = "0.15"          # Colors, styling, terminal utils (indicatif's sibling)
unicode-width = "0.2"     # Proper alignment with unicode chars

# UI
rofi = "0.4"              # Spawn rofi menus and parse selections

# LLM summarization
reqwest = { version = "0.12", features = ["json"] }

# Logging - delegated to spaceship-std for centralized config
# View logs: journalctl -t babel -f
# Reload: kill -HUP $(pgrep babel)
spaceship-std = { version = "0.1", path = "../../Lib/spaceship-std" }
tracing = "0.1"

# Scrollback parsing - ActivityState detection for Claude sessions
scrollparse = { version = "0.1", path = "../../Tools/scrollparse", features = ["serde"] }

# Config serialization (used by wset.rs for workspace set persistence)
toml = "0.8"
anstyle = "1.0.13"

# TUI - Debug console for IPC traffic inspection and daemon state
ratatui = "0.29"
crossterm = "0.29"

# WNCK - Event-based window/workspace tracking (instant, no polling)
wnck-rs = { path = "../../Lib/wnck-rs" }
glib = "0.18"
gtk = "0.18"
