[package]
name = "babel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "babel"
path = "src/main.rs"

[features]
default = []
# Cairo dot rendering is only for GTK panel clients. The daemon and protocol
# clients carry visual control data, but should not inherit GTK/Cairo just to
# understand that protocol.
gtk-render = ["dep:cairo-rs"]
# Optional libwnck/GTK workspace watcher. Without it, babel falls back to its
# existing poll/cache refresh paths instead of linking GTK into every consumer.
wnck-watch = ["dep:glib", "dep:gtk", "dep:wnck-rs"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use system libsqlite3 - "bundled" recompiles SQLite from C every build (164s!)
# Requires: pacman -S sqlite (already installed)
rusqlite = "0.31"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"

# Daemon dependencies
tokio = { version = "1", features = ["full", "signal", "sync"] }
notify = "6"
notify-debouncer-mini = "0.4"
users = "0.11"

# Terminal output
console = "0.15"          # Colors, styling, terminal utils (indicatif's sibling)
indicatif = "0.17"        # Interactive progress bars for long-running migrations
unicode-width = "0.2"     # Proper alignment with unicode chars

# UI
rofi = "0.4"              # Spawn rofi menus and parse selections

# LLM summarization
# CRITICAL: Must use rustls-tls, NOT native-tls (default)
# native-tls pulls in openssl which has EVP_bf_ecb symbol that causes
# dlopen failures in XFCE panel plugins linked against this crate
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Logging - delegated to spaceship-std for centralized config
# View logs: journalctl -t babel -f
# Reload: kill -HUP $(pgrep babel)
spaceship-std = { version = "0.2", path = "../spaceship-std" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Daemon VtrLayer setup
signal-hook = "0.3"                                                   # SIGHUP handler for log reload

# VTR tracing - structured semantic traces with depth visualization
# Provides semantic macros: state!, decision!, boundary!, effect!, checkpoint!
# VtrLayer captures events to ring buffer for parallel operation debugging
vtr = { path = "../../../holoq/repo-os2/vtr" }
once_cell = "1"                   # Lazy static initialization for VTR buffer

# Scrollback parsing - ActivityState detection for Claude sessions
scrollparse = { version = "0.1", path = "../repo-tools/scrollparse", features = ["serde"] }

# Async recursion for layout tree rebuilding
async-recursion = "1"

# Async combinators (join_all for concurrent futures)
futures = "0.3"

# Pattern matching for file path extraction
regex = "1"

# Config serialization (used by wset.rs for workspace set persistence)
toml = "0.8"
anstyle = "1.0.13"

# MCP server - babel mcp subcommand exposes Claude session tools via Model Context Protocol
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1"

# TUI - Debug console for IPC traffic inspection and daemon state
ratatui = "0.29"
crossterm = "0.29"

# GTK/Cairo client integration. These are intentionally feature-gated so
# protocol-only users of babel do not link GTK.
cairo-rs = { version = "0.18", optional = true }

# WNCK - Event-based window/workspace tracking (instant, no polling)
wnck-rs = { path = "../wnck-rs", optional = true }
glib = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3"
